# daily-kakao-news-digest

./: .env.example  .gitignore  AGENTS.md  CLEANUP.md  Dockerfile  README.md  pyproject.toml
config/: sources.yaml
docs/: CHANGE_GUIDE.md  DEPLOYMENT_STATE.md  PROJECT_CONTEXT.md
docs/runbooks/: budget-suspension.md  deployment.md  manual-reconciliation.md  oauth-bootstrap.md  source-approval.md  token-rotation.md
infra/: cloudrun-job.yaml  iam.md  runtime-token-rotator-role.yaml  scheduler.yaml  setup-budget.sh
src/news_digest/: __init__.py  auth.py  cloud.py  compose.py  config.py  dedupe.py  http.py  kakao.py  logging.py  main.py  model_summarizer.py  models.py  normalize.py  operator.py  pipeline.py  rank.py  state.py  summarize.py
src/news_digest/sources/: __init__.py  base.py  gdelt.py  naver.py  rss.py
tests/: test_cloud_runtime.py  test_compliance.py  test_delivery_integration.py  test_editorial_pipeline.py  test_expiry_reminder.py  test_infrastructure.py  test_operational_gaps.py  test_runtime_hardening.py  test_sources.py
