[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-kakao-news-digest"
version = "0.1.0"
description = "Lawful, source-grounded inputs for a private Korean news digest"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.9"
strict = true

